--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,13 @@ nav a:hover {
 
 .container {
     padding: 2rem;
-    max-width: 850px;
+    max-width: 1200px;
     margin: auto;
 }
 
+.container, .section {
+    text-align: justify;
+}
 
 .section {
     margin-bottom: 2rem;
